Add particles plugin and clean up from App.js

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -40,4 +41,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    window.onload = function() {
+      Particles.init({
+        selector: '.background',
+        color: '#48F2E3',
+        connectParticles: true,
+        minDistance: 120,
+        showParticles: true,
+        sizeVariations: 3
+      });
+    };
+  </script>
 </html>
