--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Namae Conde</title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
     <div id="root"></div>
