Update particles color to indigo shade 50

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     window.onload = function() {
       Particles.init({
         selector: '.background',
-        color: '#48F2E3',
+        color: '#e8eaf6', // indigo[50]
         connectParticles: true,
         minDistance: 120,
         showParticles: true,
