--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   </head>
   <body style="margin: 0; padding: 0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/particles.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
